--- a/webpack_test1/public/index.html
+++ b/webpack_test1/public/index.html
@@ -1,13 +1,14 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>Webpack Sample Project</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <div id='root'>
     </div>
-    <script src="bundle.js"></script>
-  </body>
+<script type="text/javascript" src="bundle.js"></script></body>
+
 </html>
